# NativeActivityAndEs

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jx/willhua/nativeactivityandes/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: EsTest.cpp  EsTest.h  JniUtils.h  MyNativeMain.cpp  MyNativeMain.h  ShaderUtils.cpp  ShaderUtils.h
app/src/main/cpp/stb/: stb_image.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/com/jx/willhua/nativeactivityandes/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
